--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #242424 !important;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,6 +24,8 @@ a:hover {
 }
 
 body {
+  background-color: #242424 !important;
+  color: rgba(255, 255, 255, 0.87);
   margin: 0;
   display: flex;
   place-items: center;
